GPC/tests/examples/fail/wrongTypeDecl4.gpc


double wrongTypeDecl4() {

    int x = 5;
    double y = 6.0;
    return x <= y;
}
